--- a/ContosoPizza/Pages/Index.cshtml
+++ b/ContosoPizza/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Seja bem-vnido ao meu site</p>
+    <p>Seja bem-vindo ao Pizza-site</p>
 </div>
