--- a/ContosoPizza/Pages/PizzaList.cshtml
+++ b/ContosoPizza/Pages/PizzaList.cshtml
@@ -8,6 +8,38 @@
     <h1 class="display-4">Pizza List</h1>
 </div>
 
+<form method="post">
+    <div asp asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="form-group">
+        <label asp-for="NewPizza.Name" class="control-label"></label>
+        <input asp-for="NewPizza.Name" class="form-control" />
+        <span asp-validation-for="NewPizza.Name" class="text-danger"></span>
+    </div>
+    <div class="form_group">
+        <label asp-for="NewPizza.Size" class="carousel-control-next"></label>
+        <select asp-for="NewPizza.Size" class="form-control" id="PizzaSize">
+            <option value="">-- Selecione o Tamanho --</option>
+            <option value="Small">Small</option>
+            <option value="Medium">Medium</option>
+            <option value="Large">Large</option>
+        </select>
+        <span asp-validation-for="NewPizza.Size" class="text-danger"></span>
+    </div>
+    <div class="form-group form-check">
+        <label class="form-check-label">
+            <input class="form-check-input" asp-for="NewPizza.IsGlutenFree" /> @Html.DisplayNameFor(model => model.NewPizza.IsGlutenFree)
+        </label>
+    </div>
+    <div class="form-group">
+        <label asp-for="NewPizza.Price" class="control-label"></label>
+        <input asp-for="NewPizza.Price" class="form-control" />
+        <span asp-validation-for="NewPizza.Price" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Salvar" class="btn btn-primary"/>
+    </div>
+</form>
+
 <table class="table mt-5">  
     <thead>
         <tr>
@@ -36,6 +68,10 @@
         }
     </tbody>
 </table>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
 
 
 
